1. NPM Module and Bower component support. Updated package.json and gulpfile to allow publishing a NPM module.
Added a bower.json file to publish a Bower component.

Creating a NPM module basically consisted of adding some information in the package.json
(`main` - main JS file of the module - and `style` - main stylesheet - properties) and
precompiling everything into the dist/ folder. This way developers will have access
to the compiled code when installing the module in their project (`npm install
firebaseui`). The default gulp command will automatically generate the NPM module.

Bower packaging consists of creating the bower.json file. It contains metadata on the
component. Developers can then run `bower install firebaseui` and fetch the JS and CSS
files in their app by using paths to the dist folder of the bower components
(e.g. src="bower_components/dist/firebase-ui-auth.js")

Bower file specs:
https://github.com/bower/spec/blob/master/json.md

2. Travis and SauceLabs support.
Configured Travis to run tests on SauceLabs.

I've added a new command:
npm test
that alias npm run test. It is also the usual default command to run tests in a
NPM project.
See the sauce_browsers.json file for the list of browsers covered.

It sill supports running phantomJS by default, so developers can use it in their local
env.

How it works:
SauceConnect creates a tunnel to remote instances of SauceLabs browsers, which exposes
the localhost to the remote instance. This tunnel gets attributed an ID. Protractor
then uses this ID to connect to the distant browser and run tests. The HTTP server
that serves test files is run locally, and the tunnel is meant for the remote instances to
access it.
When using Travis, SauceConnect will be automatically started by the process (it's an
addon directly offered by Travis). The tunnel ID will be exposed as the
TRAVIS_JOB_NUMBER.

Travis configuration:
https://docs.travis-ci.com/user/languages/javascript-with-nodejs/
Notice I'm using the secure way 

--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "README.md",
     "package.json"
   ],
+  "main": "./dist/npm.js",
+  "style": "dist/firebase-ui-auth.css",
   "scripts": {
     "build": "npm run build-soy && gulp",
     "build-soy": "node buildtools/soy_files.js",
@@ -16,6 +18,7 @@
     "serve": "npm run build && npm run generate-test-files && gulp serve",
     "generate-test-files": "./buildtools/generate_test_files.sh"
   },
+  "test": "npm run test",
   "author": "Google",
   "repository": {
     "type": "git",
@@ -25,7 +28,6 @@
   "devDependencies": {
     "closure-builder": "^2.0.17",
     "del": "^2.2.2",
-    "firebase": "^3.3.0",
     "firebase-tools": "^3.0.8",
     "google-closure-compiler": "^20160713.2.0",
     "google-closure-library": "^20160713.0.0",
@@ -41,5 +43,8 @@
     "phantomjs-prebuilt": "^2.1.13",
     "protractor": "^4.0.9",
     "streamqueue": "^1.1.1"
+  },
+  "dependencies": {
+    "firebase": "^3.3.0"
   }
 }
