Fixed Bower component's name, changed dist files to firebaseui.*
Change-Id: I6b9d0a7e7818bfcb180cdb4a8b4ee6f5a163c7c7

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
-  "name": "firebaseui-web",
+  "name": "firebaseui",
   "version": "0.0.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "main": [
-    "./dist/firebase-ui-auth.js",
-    "./dist/firebase-ui-auth.css"
+    "./dist/firebaseui.js",
+    "./dist/firebaseui.css"
   ],
   "authors": [
     "Google"
