--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "license": "Apache-2.0",
   "devDependencies": {
-    "closure-builder": "~2.0.0",
+    "closure-builder": "^2.0.17",
     "del": "^2.2.2",
     "firebase-tools": "^3.0.8",
     "google-closure-compiler": "^20160713.2.0",
