--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebaseui",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
     "dist/**",
@@ -29,9 +29,10 @@
   "devDependencies": {
     "closure-builder": "^2.0.17",
     "del": "^2.2.2",
+    "dialog-polyfill": "^0.4.7",
     "firebase-tools": "^3.0.8",
     "google-closure-compiler": "^20160713.2.0",
-    "google-closure-library": "^20160713.0.0",
+    "google-closure-library": "^20170409.0.0",
     "google-closure-templates": "^20150410.0.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^2.0.12",
@@ -46,6 +47,6 @@
     "streamqueue": "^1.1.1"
   },
   "dependencies": {
-    "firebase": "^3.3.0"
+    "firebase": "^4.0.0"
   }
 }
