--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.2.34",
+    "firebase": "^5.0.0",
     "firebase-tools": "^3.0.8",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20171112.0.0",
@@ -50,7 +51,9 @@
     "streamqueue": "^1.1.1"
   },
   "dependencies": {
-    "dialog-polyfill": "^0.4.7",
-    "firebase": "^5.0.0"
+    "dialog-polyfill": "^0.4.7"
+  },
+  "peerDependencies": {
+    "firebase": ">=5.0.0"
   }
 }
