--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,13 @@ node_js:
 install: npm install
 script: npm test -- --saucelabs
 before_install:
-  - unset _JAVA_OPTIONS
+ - export CHROME_BIN=/usr/bin/google-chrome
+ - export DISPLAY=:99.0
+ - sh -e /etc/init.d/xvfb start
+ - sudo apt-get update
+ - sudo apt-get install -y libappindicator1 fonts-liberation
+ - wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+ - sudo dpkg -i google-chrome*.deb  
+ - unset _JAVA_OPTIONS
 addons:
   sauce_connect: true
