--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dist/firebaseui.js",
     "dist/firebaseui.css",
     "dist/npm.js",
+    "dist/esm.js",
     "dist/index.d.ts",
     "dist/externs",
     "LICENSE",
@@ -13,6 +14,7 @@
     "package.json"
   ],
   "main": "./dist/npm.js",
+  "module": "./dist/esm.js",
   "types": "./dist/index.d.ts",
   "style": "dist/firebaseui.css",
   "scripts": {
@@ -37,8 +39,8 @@
     "firebase": "^5.10.0",
     "firebase-tools": "^7.0.2",
     "fs-extra": "^3.0.1",
-    "google-closure-compiler": "^20181210.0.0",
-    "google-closure-library": "^20180910.0.0",
+    "google-closure-compiler": "^20190415.0.0",
+    "google-closure-library": "^20190415.0.0",
     "google-closure-templates": "^20150410.0.0",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^4.2.0",
