--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "type": "git",
     "url": "https://github.com/firebase/firebaseui-web.git"
   },
+  "publishConfig": {
+    "registry": "https://wombat-dressing-room.appspot.com"
+  },
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.3.8",
