--- a/package.json
+++ b/package.json
@@ -60,8 +60,7 @@
   "dependencies": {
     "dialog-polyfill": "^0.4.7",
     "material-design-lite": "^1.2.0",
-    "node-forge": "^0.10.0",
-    "url-regex-safe": "^1.0.2"
+    "node-forge": "^0.10.0"
   },
   "peerDependencies": {
     "firebase": ">=7.11.0"
