--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.3.8",
-    "firebase": "^7.23.0",
+    "firebase": "^8.0.0",
     "firebase-tools": "^7.16.2",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
@@ -58,10 +58,11 @@
     "streamqueue": "^1.1.1"
   },
   "dependencies": {
+    "@firebase/auth": "^0.15.2",
     "dialog-polyfill": "^0.4.7",
     "material-design-lite": "^1.2.0"
   },
   "peerDependencies": {
-    "firebase": ">=7.11.0"
+    "firebase": ">=8.0.0"
   }
 }
