--- a/package.json
+++ b/package.json
@@ -61,7 +61,5 @@
     "dialog-polyfill": "^0.4.7",
     "material-design-lite": "^1.2.0"
   },
-  "peerDependencies": {
-    "firebase": ">=7.11.0"
-  }
+  "peerDependencies": {}
 }
