--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "firebase-tools": "^9.3.0",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
+    "google-closure-deps": "^20210406.0.0",
     "google-closure-library": "^20190415.0.0",
     "google-closure-templates": "^20150410.0.0",
     "gulp": "^4.0.2",
