--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebaseui",
-  "version": "4.8.0",
+  "version": "5.0.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
     "dist/firebaseui.js",
@@ -39,8 +39,9 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.3.7",
-    "firebase": "^8.2.4",
+    "firebase": "9.0.0-beta.2",
     "firebase-tools": "^9.3.0",
+    "firebase-v8": "npm:firebase@^8.2.4",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
     "google-closure-deps": "^20210406.0.0",
@@ -63,6 +64,6 @@
     "material-design-lite": "^1.2.0"
   },
   "peerDependencies": {
-    "firebase": ">=8.2.4"
+    "firebase": "9.0.0-beta.2"
   }
 }
