--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "firebaseui",
-  "version": "2.5.1",
+  "version": "5.0.0-beta.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "main": [
     "./dist/firebaseui.js",
@@ -22,6 +22,6 @@
     "out"
   ],
   "dependencies": {
-    "firebase": "^4.1.2"
+    "firebase": "9.0.0-beta.8"
   }
 }
