--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "firebaseui",
-  "version": "5.0.0-beta.0",
+  "version": "0.600.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "main": [
     "./dist/firebaseui.js",
