--- a/package.json
+++ b/package.json
@@ -18,14 +18,13 @@
   "types": "./dist/index.d.ts",
   "style": "dist/firebaseui.css",
   "scripts": {
-    "build": "gulp",
+    "build": "gulp && cp -r dist demo/public",
     "build-all": "gulp build-all",
     "build-soy": "gulp build-soy",
     "demo": "npm run build && ./buildtools/run_demo.sh",
     "test": "npm run build && npm run generate-test-files && ./buildtools/run_tests.sh",
     "serve": "npm run build && npm run generate-test-files && gulp serve",
-    "generate-test-files": "./buildtools/generate_test_files.sh",
-    "prepublish": "npm run test && cp -r dist demo/public"
+    "generate-test-files": "./buildtools/generate_test_files.sh"
   },
   "test": "npm run test",
   "author": "Google",
@@ -34,7 +33,7 @@
     "url": "https://github.com/firebase/firebaseui-web.git"
   },
   "publishConfig": {
-    "registry": "https://wombat-dressing-room.appspot.com"
+    "registry": "https://wombat-dressing-room.appspot.com/firebaseui/_ns"
   },
   "license": "Apache-2.0",
   "devDependencies": {
