--- a/demo-npm/package.json
+++ b/demo-npm/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "firebase": "9.0.0-beta.8",
+    "firebase": "9.0.0-202171919375",
     "firebaseui": "file:.."
   },
   "devDependencies": {
