--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,5 @@ jobs:
             ${{ runner.os }}-10-node_modules-
       - name: Run tests
         run: |
+          npm ci
           npm test -- --saucelabs
