--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,4 +35,6 @@ jobs:
         if: steps.node_modules_cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Build & run tests
-        run: npm test -- --saucelabs
+        run: |
+          ./buildtools/sauce_connect.sh
+          npm test -- --saucelabs
