--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   "types": "./dist/index.d.ts",
   "style": "dist/firebaseui.css",
   "scripts": {
-    "build": "gulp && cp -r dist demo/public",
+    "build": "gulp && cp -r dist demo/public && npm run generate-test-files",
     "build-all": "gulp build-all",
     "build-soy": "gulp build-soy",
     "demo": "npm run build && ./buildtools/run_demo.sh",
-    "test": "npm run build && npm run generate-test-files && ./buildtools/run_tests.sh",
+    "test": "npm run build && ./buildtools/run_tests.sh",
     "serve": "npm run build && npm run generate-test-files && gulp serve",
     "generate-test-files": "./buildtools/generate_test_files.sh"
   },
