--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - "**"
   pull_request:
-    branches: 
+    branches:
       - "**"
 
 env:
@@ -35,9 +35,9 @@ jobs:
         if: steps.node_modules_cache.outputs.cache-hit != 'true'
         run: npm ci
       - name: Build
-        run: |
-          npm run build
-          npm run generate-test-files
+        run: gulp
+      - name: Generate test files
+        run: npm run generate-test-files
       - name: Test
         run: |
           ./buildtools/sauce_connect.sh &
