--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebaseui",
-  "version": "0.600.0",
+  "version": "6.0.0",
   "description": "Javascript library for customizable UI on top of Firebase SDK",
   "files": [
     "dist/firebaseui.js",
@@ -18,7 +18,7 @@
   "types": "./dist/index.d.ts",
   "style": "dist/firebaseui.css",
   "scripts": {
-    "build": "gulp && cp -r dist demo/public",
+    "build": "gulp",
     "build-all": "gulp build-all",
     "build-soy": "gulp build-soy",
     "demo": "npm run build && ./buildtools/run_demo.sh",
