--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "demo": "npm run build && ./buildtools/run_demo.sh",
     "test": "npm run build && npm run generate-test-files && ./buildtools/run_tests.sh",
     "serve": "npm run build && npm run generate-test-files && gulp serve",
-    "generate-test-files": "./buildtools/generate_test_files.sh"
+    "generate-test-files": "./buildtools/generate_test_files.sh",
+    "prepublish": "npm run test && cp -r dist demo/public"
   },
   "test": "npm run test",
   "author": "Google",
@@ -39,7 +40,7 @@
   "devDependencies": {
     "closure-builder": "^2.3.7",
     "firebase": "^9.1.2",
-    "firebase-tools": "^9.18.0",
+    "firebase-tools": "^9.3.0",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
     "google-closure-deps": "^20210406.0.0",
