Upgraded to gulp-sass 5.0.0 to use node-sass 6.0.0
https://github.com/dlmanning/gulp-sass/blob/978b8f6b48a3d4da1110076b5a246a5e80f7477e/package.json#L46 uses node-sass 6.0.0 which should support Node 12.

Updated gulpfile.js as recommended in https://github.com/dlmanning/gulp-sass#migrating-to-version-5

Ran npm install sass --save-dev to fix errors in npm install.

--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "gulp-connect": "^5.5.0",
     "gulp-css-flip": "^0.4.0",
     "gulp-css-inline-images": "^0.1.1",
-    "gulp-sass": "^4.1.0",
+    "gulp-sass": "^5.0.0",
     "gulp-util": "^3.0.7",
     "protractor": "^7.0.0",
+    "sass": "^1.49.7",
     "streamqueue": "^1.1.1",
     "webdriver-manager": "^12.1.8"
   },
