--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.3.7",
-    "firebase": "^9.1.3",
+    "firebase": "^9.6.8",
     "firebase-tools": "^9.3.0",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "dialog-polyfill": "^0.4.7",
+    "firebaseui": "^6.0.1",
     "material-design-lite": "^1.2.0"
   },
   "peerDependencies": {
