--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "closure-builder": "^2.3.7",
-    "firebase": "^9.13.0",
-    "firebase-tools": "^12.4.2",
+    "firebase": "^10.0.0",
+    "firebase-tools": "^12.4.4",
     "fs-extra": "^3.0.1",
     "google-closure-compiler": "^20190415.0.0",
     "google-closure-deps": "^20210406.0.0",
@@ -65,6 +65,6 @@
     "material-design-lite": "^1.2.0"
   },
   "peerDependencies": {
-    "firebase": "^9.1.3"
+    "firebase": "^9.1.3 || ^10.0.0"
   }
 }
