update deploy container deps

--- a/buildtools/container/Dockerfile
+++ b/buildtools/container/Dockerfile
@@ -1,11 +1,12 @@
-FROM node:14.17.3
+FROM ubuntu:latest
 
 # Install dependencies: curl, git, jq, python2 and jre8.
 RUN apt-get update && \
-    apt-get install -y curl git jq python openjdk-8-jre-headless
+    apt-get install -y curl git jq python-is-python3 openjdk-11-jre-headless nodejs npm wget
 
-# Install npm at 6.14.13.
-RUN npm install --global npm@6.14.13
+# Print Node version and npm version
+RUN node -v
+RUN npm -v
 
 # Install hub
 RUN curl -fsSL --output hub.tgz https://github.com/github/hub/releases/download/v2.11.2/hub-linux-amd64-2.11.2.tgz
