--- a/buildtools/container/Dockerfile
+++ b/buildtools/container/Dockerfile
@@ -13,5 +13,9 @@ RUN curl -fsSL --output hub.tgz https://github.com/github/hub/releases/download/
 RUN tar --strip-components=2 -C /usr/bin -xf hub.tgz hub-linux-amd64-2.11.2/bin/hub
 
 # Install the lastest Chrome stable version.
-RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
-RUN dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+# RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
+# RUN dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
+
+# Pinning Chrome v118
+RUN wget http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_118.0.5993.70_amd64.deb
+RUN dpkg -i google-chrome-stable_118.0.5993.70_amd64.deb; apt-get -fy install
