Add TODO comment

--- a/buildtools/container/Dockerfile
+++ b/buildtools/container/Dockerfile
@@ -16,6 +16,7 @@ RUN tar --strip-components=2 -C /usr/bin -xf hub.tgz hub-linux-amd64-2.11.2/bin/
 # RUN wget https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb
 # RUN dpkg -i google-chrome-stable_current_amd64.deb; apt-get -fy install
 
-# Pinning Chrome v118
+# Pin Chrome v118 because we're pinning this version in CI.
+# TODO: Install the lastest Chrome stable version once we unpin chrome version in CI.
 RUN wget http://dl.google.com/linux/chrome/deb/pool/main/g/google-chrome-stable/google-chrome-stable_118.0.5993.70_amd64.deb
 RUN dpkg -i google-chrome-stable_118.0.5993.70_amd64.deb; apt-get -fy install
