--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,7 +15,7 @@
 packages:
   - packages/*
   - packages/angular/projects/*
-  - examples/* #Remove until all package depenencies are published to npm
+  # - examples/* Remove until all package depenencies are published to npm
 onlyBuiltDependencies:
   - '@parcel/watcher'
   - esbuild
