--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -14,17 +14,17 @@
     "serve:ssr:angular-ssr": "node dist/angular-ssr/server/server.mjs"
   },
   "dependencies": {
-    "@angular/animations": "^19.1.0",
-    "@angular/common": "^19.1.0",
-    "@angular/compiler": "^19.1.0",
-    "@angular/core": "^19.1.0",
+    "@angular/animations": "^20.2.4",
+    "@angular/common": "^20.2.4",
+    "@angular/compiler": "^20.2.4",
+    "@angular/core": "^20.2.4",
     "@angular/fire": "^19.0.0",
-    "@angular/forms": "^19.1.0",
-    "@angular/platform-browser": "^19.1.0",
-    "@angular/platform-browser-dynamic": "^19.1.0",
-    "@angular/platform-server": "^19.1.0",
-    "@angular/router": "^19.1.0",
-    "@angular/ssr": "^19.1.7",
+    "@angular/forms": "^20.2.4",
+    "@angular/platform-browser": "^20.2.4",
+    "@angular/platform-browser-dynamic": "^20.2.4",
+    "@angular/platform-server": "^20.2.4",
+    "@angular/router": "^20.2.4",
+    "@angular/ssr": "^20.2.2",
     "@firebase-ui/angular": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-angular-0.0.1.tgz",
     "@firebase-ui/core": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-core-0.0.1.tgz",
     "@firebase-ui/styles": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-styles-0.0.1.tgz",
@@ -38,9 +38,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.1.7",
-    "@angular/cli": "^19.1.7",
-    "@angular/compiler-cli": "^19.1.0",
+    "@angular/build": "^20.2.2",
+    "@angular/cli": "^20.2.2",
+    "@angular/compiler-cli": "^20.2.4",
     "@tanstack/angular-form": "^0.42.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
@@ -53,7 +53,8 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "nanostores": "^0.11.3",
-    "ng-packagr": "^19.1.0",
-    "typescript": "~5.7.2"
+    "ng-packagr": "^20.2.0",
+    "postcss": "^8.5.3",
+    "typescript": "~5.9.2"
   }
 }
