fix(angular): fixed imports with updated dist/build configuration

--- a/examples/angular/package.json
+++ b/examples/angular/package.json
@@ -25,10 +25,10 @@
     "@angular/platform-server": "^20.2.4",
     "@angular/router": "^20.2.4",
     "@angular/ssr": "^20.2.2",
-    "@firebase-ui/angular": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-angular-0.0.1.tgz",
-    "@firebase-ui/core": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-core-0.0.1.tgz",
-    "@firebase-ui/styles": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-styles-0.0.1.tgz",
-    "@firebase-ui/translations": "https://github.com/firebase/firebaseui-web/raw/refs/heads/v7-alpha/releases/firebase-ui-translations-0.0.1.tgz",
+    "@firebase-ui/angular": "workspace:*",
+    "@firebase-ui/core": "workspace:*",
+    "@firebase-ui/styles": "workspace:*",
+    "@firebase-ui/translations": "workspace:*",
     "@tailwindcss/postcss": "^4.0.6",
     "express": "^4.18.2",
     "postcss": "^8.5.2",
