--- a/packages/firebaseui-angular/package.json
+++ b/packages/firebaseui-angular/package.json
@@ -4,9 +4,9 @@
   "files": [
     "dist"
   ],
-  "main": "./dist/fesm2022/firebase-ui-angular.mjs",
-  "module": "./dist/fesm2022/firebase-ui-angular.mjs",
-  "typings": "./dist/index.d.ts",
+  "main": ".fesm2022/firebase-ui-angular.mjs",
+  "module": ".fesm2022/firebase-ui-angular.mjs",
+  "typings": "./index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
@@ -14,6 +14,7 @@
     }
   },
   "scripts": {
+    "prepare": "pnpm run build",
     "build": "ng-packagr -p ng-package.json",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
     "release": "pnpm pack --pack-destination ../../releases/"
