--- a/packages/firebaseui-angular/package.json
+++ b/packages/firebaseui-angular/package.json
@@ -19,23 +19,23 @@
     "release": "pnpm pack --pack-destination ../../releases/"
   },
   "peerDependencies": {
-    "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0",
+    "@angular/common": "catalog:peerDependencies",
+    "@angular/core": "catalog:peerDependencies",
     "@firebase-ui/core": "workspace:*",
     "@firebase-ui/translations": "workspace:*"
   },
   "dependencies": {
     "@tanstack/angular-form": "^1.1.0",
-    "nanostores": "^0.11.3",
-    "tslib": "^2.3.0",
-    "zod": "^3.24.1"
+    "tslib": "^2.8.1",
+    "nanostores": "catalog:"
   },
   "sideEffects": false,
   "devDependencies": {
-    "@angular/fire": "^19.1.0",
-    "@angular/forms": "^19.2.11",
-    "@angular/router": "^19.2.11",
+    "@angular/core": "catalog:",
+    "@angular/forms": "catalog:",
+    "@angular/router": "catalog:",
+    "@angular/fire": "catalog:",
     "ng-packagr": "^19.1.0",
-    "rxjs": "^7.8.2"
+    "rxjs": "catalog:"
   }
 }
