--- a/packages/firebaseui-styles/package.json
+++ b/packages/firebaseui-styles/package.json
@@ -14,6 +14,6 @@
     "release": "pnpm run build && pnpm pack --pack-destination ../../releases/"
   },
   "devDependencies": {
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "catalog:"
   }
 }
