--- a/packages/firebaseui-translations/package.json
+++ b/packages/firebaseui-translations/package.json
@@ -28,9 +28,9 @@
     "release": "npm run build && pnpm pack --pack-destination ../../releases/"
   },
   "devDependencies": {
-    "prettier": "^3.1.1",
-    "rimraf": "^6.0.1",
-    "tsup": "^8.0.1",
-    "typescript": "^5.7.3"
+    "prettier": "catalog:",
+    "rimraf": "catalog:",
+    "tsup": "catalog:",
+    "typescript": "catalog:"
   }
 }
