--- a/package.json
+++ b/package.json
@@ -9,6 +9,17 @@
     "build:react": "pnpm --filter=@firebase-ui/react run build",
     "build:angular": "pnpm --filter=@firebase-ui/angular run build",
     
+    "test": "pnpm run test:core && pnpm run test:react && pnpm run test:angular && pnpm run test:translations && pnpm run test:styles",
+    "test:core": "pnpm --filter=@firebase-ui/core run test",
+    "test:react": "pnpm --filter=@firebase-ui/react run test",
+    "test:angular": "pnpm --filter=@firebase-ui/angular run test",
+    "test:translations": "pnpm --filter=@firebase-ui/translations run test",
+    "test:styles": "pnpm --filter=@firebase-ui/styles run test",
+    "test:watch": "pnpm run test:core:watch & pnpm run test:react:watch & pnpm run test:angular:watch",
+    "test:core:watch": "pnpm --filter=@firebase-ui/core run test:unit:watch",
+    "test:react:watch": "pnpm --filter=@firebase-ui/react run test:unit:watch",
+    "test:angular:watch": "pnpm --filter=@firebase-ui/angular run test:watch",
+    
     "publish:tags:core": "pnpm --filter=@firebase-ui/core run publish:tags",
     "publish:tags:translations": "pnpm --filter=@firebase-ui/translations run publish:tags",
     "publish:tags:react": "pnpm --filter=@firebase-ui/react run publish:tags",
