--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,10 +8,6 @@ on:
     branches:
       - "**"
 
-env:
-  SAUCE_USERNAME: ${{secrets.SAUCE_USERNAME}}
-  SAUCE_ACCESS_KEY: ${{secrets.SAUCE_ACCESS_KEY}}
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -23,20 +19,11 @@ jobs:
         with:
           node-version: '18'
           check-latest: true
-      - name: node_modules cache
-        id: node_modules_cache
-        uses: actions/cache@v4
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
         with:
-          path: ./node_modules
-          key: ${{ runner.os }}-18-node_modules-${{ hashFiles('package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-18-node_modules-
-      - name: NPM install
-        if: steps.node_modules_cache.outputs.cache-hit != 'true'
-        run: npm ci
-      - name: Build & run tests
-        run: npm run test
-      - name: Run tests in Saucelabs
-        run: |
-          ./buildtools/sauce_connect.sh &
-          ./buildtools/run_tests.sh --saucelabs
+          version: latest
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+      - name: Run tests
+        run: pnpm test
