ci(*): added emulator support

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@firebaseui/root",
   "private": true,
   "scripts": {
-    "emulators": "firebase emulators:start --only auth",
+    "emulators": "firebase emulators:start --only auth --project demo-test",
     "build": "pnpm run build:translations && pnpm run build:core && pnpm run build:react",
     "build:core": "pnpm --filter=@firebase-ui/core run build",
     "build:translations": "pnpm --filter=@firebase-ui/translations run build",
