--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: '20'
           check-latest: true
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
@@ -25,5 +25,16 @@ jobs:
           version: latest
       - name: Install dependencies
         run: pnpm install
-      - name: Run tests
-        run: pnpm test
+      - name: Install Firebase CLI
+        run: npm i -g firebase-tools@14.15.2
+      - name: Start Firebase emulator and run tests
+        run: |
+          firebase emulators:start --only auth --project demo-test &
+          sleep 15
+          # Wait for emulator to be ready
+          until wget -q --spider http://localhost:9099 2>/dev/null; do
+            echo "Waiting for emulator to start..."
+            sleep 2
+          done
+          echo "Emulator is ready, running tests..."
+          pnpm test
