--- a/packages/firebaseui-angular/package.json
+++ b/packages/firebaseui-angular/package.json
@@ -15,6 +15,10 @@
   },
   "scripts": {
     "build": "ng-packagr -p ng-package.json",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\"",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
     "release": "pnpm pack --pack-destination ../../releases/"
   },
@@ -35,7 +39,12 @@
     "@angular/fire": "^19.1.0",
     "@angular/forms": "^19.2.11",
     "@angular/router": "^19.2.11",
+    "@eslint/js": "^9.22.0",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^9.1.0",
     "ng-packagr": "^19.1.0",
-    "rxjs": "^7.8.2"
+    "prettier": "^3.1.1",
+    "rxjs": "^7.8.2",
+    "typescript": "^5.7.3"
   }
 }
