--- a/packages/firebaseui-core/package.json
+++ b/packages/firebaseui-core/package.json
@@ -22,8 +22,10 @@
     "build": "tsup",
     "build:local": "pnpm run build && pnpm pack",
     "dev": "tsup --watch",
-    "lint": "tsc --noEmit",
+    "lint": "eslint . --ext .ts",
+    "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\" \"tests/**/*.ts\"",
     "clean": "rimraf dist",
     "test:unit": "vitest run tests/unit",
     "test:unit:watch": "vitest tests/unit",
@@ -50,7 +52,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@types/jsdom": "^21.1.7",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^9.1.0",
     "firebase": "^11.0.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.1.1",
