--- a/packages/firebaseui-react/package.json
+++ b/packages/firebaseui-react/package.json
@@ -20,8 +20,10 @@
     "build": "tsup",
     "build:local": "pnpm run build && pnpm pack",
     "dev": "tsup --watch",
-    "lint": "tsc --noEmit",
-    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.{ts,tsx}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "clean": "rimraf dist",
     "test:unit": "vitest run tests/unit",
     "test:unit:watch": "vitest tests/unit",
@@ -46,6 +48,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.22.0",
     "@testing-library/jest-dom": "^6.4.3",
     "@testing-library/react": "^16.2.0",
     "@types/jsdom": "^21.1.7",
@@ -53,7 +56,13 @@
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jsdom": "^26.0.0",
+    "prettier": "^3.1.1",
     "tsup": "^8.3.6",
     "typescript": "~5.6.2",
     "vite": "^6.0.5",
