--- a/packages/firebaseui-styles/package.json
+++ b/packages/firebaseui-styles/package.json
@@ -10,10 +10,13 @@
     "prepare": "pnpm run build",
     "build": "npx -y @tailwindcss/cli -i ./src.css -o ./dist.css --minify",
     "build:local": "pnpm run build && pnpm pack",
+    "format": "prettier --write \"src/**/*.css\"",
+    "format:check": "prettier --check \"src/**/*.css\"",
     "publish:tags": "sh -c 'TAG=\"${npm_package_name}@${npm_package_version}\"; git tag --list \"$TAG\" | grep . || git tag \"$TAG\"; git push origin \"$TAG\"'",
     "release": "pnpm run build && pnpm pack --pack-destination ../../releases/"
   },
   "devDependencies": {
+    "prettier": "^3.1.1",
     "tailwindcss": "^4.0.0"
   }
 }
