fix(angular): updated depenencies for testing angular

--- a/packages/firebaseui-angular/package.json
+++ b/packages/firebaseui-angular/package.json
@@ -30,7 +30,8 @@
   "dependencies": {
     "@tanstack/angular-form": "^1.1.0",
     "tslib": "^2.8.1",
-    "nanostores": "catalog:"
+    "nanostores": "catalog:",
+    "firebase": "catalog:"
   },
   "sideEffects": false,
   "devDependencies": {
@@ -38,7 +39,22 @@
     "@angular/forms": "catalog:",
     "@angular/router": "catalog:",
     "@angular/fire": "catalog:",
-    "ng-packagr": "^19.1.0",
-    "rxjs": "catalog:"
+    "@angular-devkit/build-angular": "catalog:",
+    "@angular/cli": "catalog:",
+    "@angular/compiler": "catalog:",
+    "@angular/compiler-cli": "catalog:",
+    "@angular/platform-browser": "catalog:",
+    "@angular/platform-browser-dynamic": "catalog:",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage": "^2.2.1",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "jasmine-core": "^5.1.0",
+    "@types/jasmine": "^5.1.0",
+    "zone.js": "catalog:",
+    "ng-packagr": "^20.0.0",
+    "rxjs": "catalog:",
+    "typescript": "catalog:"
   }
 }
