--- a/packages/react/tsconfig.node.json
+++ b/packages/react/tsconfig.node.json
@@ -22,7 +22,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@firebase-ui/core": ["../firebaseui-core/src/*"]
+      "@firebase-ui/core": ["../core/src/index.ts"]
     }
   },
   "include": ["vite.config.ts"]
