refactor(react): Use CVA buttonVariant from styles

--- a/packages/react/tsconfig.node.json
+++ b/packages/react/tsconfig.node.json
@@ -22,7 +22,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "@firebase-ui/core": ["../core/src/index.ts"]
+      "@firebase-ui/core": ["../core/src/index.ts"],
+      "@firebase-ui/styles": ["../styles/src/index.ts"]
     }
   },
   "include": ["vite.config.ts"]
