test(core): Add schemas tests

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -60,6 +60,7 @@
     "tsup": "catalog:",
     "typescript": "catalog:",
     "vite": "catalog:",
+    "vitest-tsconfig-paths": "catalog:",
     "vitest": "catalog:"
   }
 }
