fix(*): update Firebase peer dependencies to support v11 and v12
- Update Firebase catalog version from ^11.8.0 to ^11.10.0
- Change peer dependencies catalog Firebase range from ^12 to ^11 || ^12
- Reorganize workspace YAML structure with proper sections and comments
- Restore Apache License copyright header
- Ensure AngularFire compatibility while allowing Firebase v12 flexibility

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -15,17 +15,9 @@
 packages:
   - packages/*
 
-catalogs:
-  peerDependencies:
-    firebase: ^12
-    react: ^19
-    react-dom: ^19
-    "@angular/core": ^20.2.2
-    "@angular/common": ^20.2.2
-
 catalog:
   # Firebase
-  firebase: ^11.8.0
+  firebase: ^11.10.0
 
   # Build tools
   typescript: ^5.9.2
@@ -72,6 +64,14 @@ catalog:
   zod: ^3.24.1 # TODO: Can this be upgraded to v4?
   nanostores: ^1.0.1
   "@types/node": ^24.3.1
+
+catalogs:
+  peerDependencies:
+    '@angular/common': ^20.2.2
+    '@angular/core': ^20.2.2
+    firebase: ^11 || ^12
+    react: ^19
+    react-dom: ^19
 
 onlyBuiltDependencies:
   - '@parcel/watcher'
